fixed distortion

--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -6,6 +6,7 @@
 @import 'page';
 @import "podStats";
 
+
 .section .section-title {
   background-color: #f2f2f2;
   border-radius: 8px;
@@ -24,7 +25,7 @@
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   font-family: "Open Sans", sans-serif;
 }
 
@@ -34,7 +35,7 @@
 
 @media only screen and (max-width: 1500px) {
   .card-container {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -73,7 +74,7 @@ h2 {
   flex-direction: row;
   align-items: center;
   margin: 20px 30px;
-  background-color: white;
+  background-color: #fff;
   border-radius: .375rem;
   padding: 1.5em;
   font-size: 1.2em;
@@ -98,7 +99,7 @@ h2 {
 a {
   color: #000;
   margin: 20px 30px;
-  background-color: white;
+  //background-color: white;
   border-radius: .375rem;
   padding: 1.0em;
   font-size: 1.2em;
@@ -110,6 +111,7 @@ a {
     margin-top: 5px;
     margin: 0px;
     text-align: left;
+    color: #000;
   }
 
   .title {
@@ -121,12 +123,13 @@ a {
   .description {
     font-size: medium;
     font-weight: 400;
+    color: #000;
   }
 
   .dates {
-      font-size: small;
-      color: #404040;
-  }
+    font-size: small;
+    color: #404040;
+  }   
 
   .social-icon {
     margin-top: 10px;
